--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -117,7 +117,7 @@ a.download-button {
 	font-size: 28px;
 	font-weight: bold;
 	background: #33A700 url('../images/github-logo.png') no-repeat 92% 50%;
-	border: 2px solid #339410;
+	border: 2px solid #339410 !important;
 	-webkit-box-shadow: 3px 3px 5px #000000;
 	-moz-box-shadow: 3px 3px 5px #000000;
 	box-shadow: 3px 3px 5px #000000;
