Updated pages with HW05 references

--- a/css/bgr.css
+++ b/css/bgr.css
@@ -13,6 +13,14 @@ a:hover {
   border-bottom: 1px solid;
 }
 
+b {
+  font-weight: bold;
+}
+
+i {
+  font-style: italic;
+}
+
 
 /* push footer to bottom */
 
